syntax = "proto3";

option csharp_namespace = "DS.SystemsCommunication.ConsoleClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc RegisterApplications (RegistrationRequest) returns (RegistrationReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message RegistrationRequest {
  string registrationList = 1;
}

message RegistrationReply {
  string noProcessed = 1;
}


// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
